BUGFIX - Ajustement de css pour le titre du carousel en version mobile

--- a/src/styles/components/modern-design/carousel/full-image/style.css
+++ b/src/styles/components/modern-design/carousel/full-image/style.css
@@ -11,6 +11,7 @@
   height: 6.5rem;
   margin: var(--margin-24);
   position: relative;
+  white-space: nowrap;
 }
 
 .carousel-header h2 {
